12/1/11 common: Replaced house and mountain images with higher resolution versions from NP
12/1/11 common: use PhetColorScheme.RED_COLORBLIND instead of Color.red
12/1/11 common: require pie values to be positive
12/1/11 basics: Fixed initial value of track friction for the slider
12/1/11 basics: Fixed: when transitioning from a spline to the floor, there is a thermal energy discontinuity
12/1/11 basics: Made floor friction same as track friction
12/1/11 common: Fixed: Tracks are no longer interactive in non-basics mode
11/30/11 basics: Move the double-well to the right so it will have its lowest peak directly on the 6 meter mark for the grid
11/30/11 common/basics: check in asset file with revised mountains image
11/30/11 common: fix NullPointerException that happens in the case where the user's first interaction with the spline toolbox is a mouse press with no drag
11/30/11 common: revert to original images for mountains and house, there's something odd going on here...
11/30/11 common: switch from Color.red to PhetColorScheme.RED_COLORBLIND for colors that are displayed using text with a black drop shadow (other uses of Color.red should be reviewed)
11/30/11 basics: i18n of new friction slider
11/30/11 common: new images for mountains and house (but they still need to be 1.5x larger so we're not scaling up)
11/30/11 common/basics: check in asset file for new icons and images
11/30/11 common/basics: replace ImageLoader.loadBufferedImage with EnergySkateParkResources.getImage
11/30/11 common: switch to EnergySkateParkResources.getImage for loading various planet images
11/30/11 common: position Bar Graph dialog closer to the initial position of the main frame
11/30/11 basics: left justify controls in ViewControlPanel
11/30/11 common: change "Show Grid" to "Grid" (this could be done for basics only, but didn't seem worth the effort)
11/30/11 common: rename EnergySkateParkStrings to EnergySkateParkResources, since it now loads strings and images